--- a/Portfolio/portfolio_tyyli.css
+++ b/Portfolio/portfolio_tyyli.css
@@ -7,26 +7,27 @@ body {
     width: 100%;
     position: relative;
     text-align: center;
-    top: 50px;
+    top: 30px;
+    background-image: url(kuva1.jpg)
 }
 .kuvaOtsikko h1{
     font-size: 60px;
+    width: 50%;
     text-transform: uppercase;
     letter-spacing: 3px;
-    position: absolute;
+    position: relative;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     border: 2px solid white;
     padding: 25px
 }
-.Portfolio{
-    position: absolute;
-    align: center;
+.kuvaOtsikko p{
+    position: relative;
     font-size: 27px;
     letter-spacing: 20px;
     text-transform: uppercase;
-    /* top: 70%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
+    top: 60px;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
