--- a/Portfolio/portfolio_tyyli.css
+++ b/Portfolio/portfolio_tyyli.css
@@ -4,11 +4,11 @@ body {
     color: white;
 }
 .kuvaOtsikko{
-    width: 100%;
+    background-image: url(kuva1.jpg);
+    background-repeat: no-repeat; 
     position: relative;
     text-align: center;
     top: 30px;
-    background-image: url(kuva1.jpg)
 }
 .kuvaOtsikko h1{
     font-size: 60px;
@@ -16,18 +16,23 @@ body {
     text-transform: uppercase;
     letter-spacing: 3px;
     position: relative;
-    top: 40%;
+    margin-bottom: 175px;
+    top: 150px;
     left: 50%;
     transform: translate(-50%, -50%);
     border: 2px solid white;
-    padding: 25px
+    padding: 25px;
 }
 .kuvaOtsikko p{
     position: relative;
     font-size: 27px;
     letter-spacing: 20px;
     text-transform: uppercase;
-    top: 60px;
+    top: -60px;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.linkit {
+    background-color: black;
+    padding: 10px;
 }
